--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,15 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  background: #fff;
+  min-width: 320px;
+  min-height: 100vh;
+  color: black;
+}
